--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+   
     <head>
+        
         <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
+        <title></title>
         <link rel="stylesheet" href="style.css">
-    </head>
+
+     </head>
+
+     <body>
+
+        <h1></h1>
